# mceas

./: CHANGELOG.md  DEVLOG.md  README.md
agent/: CMakeLists.txt
agent/include/internal/: agent.h  behavior_module.h  common.h  config.h  crypto_module.h  errors.h  logging.h  module.h  module_base.h  module_manager.h  platform.h  types.h  updater.h  version.h
agent/include/internal/behavior/: network.h  process.h  session.h
agent/include/internal/browser/: browser_module.h  chrome.h  common.h  edge.h  firefox.h
agent/include/internal/comm/: client.h  connection.h  message.h
agent/include/internal/crypto/: common.h  detector.h  exodus.h  metamask.h  solana.h  ton.h  trust.h
agent/include/internal/security/: anti_analysis.h  self_protection.h
agent/include/internal/telemetry/: analyzer.h  classifier.h  file_telemetry_module.h  scanner.h
agent/include/internal/utils/: platform_utils.h
agent/src/: main.cpp
agent/src/comm/: client.cpp  connection.cpp  message.cpp
agent/src/comm/protocols/: doh_protocol.cpp  http_protocol.cpp  protocol_factory.cpp
agent/src/core/: agent.cpp  config.cpp  module_manager.cpp  updater.cpp
agent/src/modules/: module_base.cpp
agent/src/modules/behavior/: behavior_module.cpp  network.cpp  process.cpp  session.cpp
agent/src/modules/browser/: browser_module.cpp  chrome.cpp  common.cpp  edge.cpp  firefox.cpp
agent/src/modules/crypto/: common.cpp  crypto_module.cpp  detector.cpp  exodus.cpp  metamask.cpp  solana.cpp  ton.cpp  trust.cpp
agent/src/modules/telemetry/: analyzer.cpp  scanner.cpp  (+2 more)
agent/src/security/: anti_analysis.cpp  self_protection.cpp
agent/utils/: logging.cpp  platform_utils.cpp
(+9 files in other folders)
